2004-06-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b208

	* Change: view_album - unset $myAlbum if item isn't an album so that
	  we don't carry it over to the next item

	* Change: un-revert printChildren opt, it was correct

2004-06-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b207

	* Change: Revert printChildren opt .. might be causing an issue

2004-06-22 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b206

	* Bugfix: #962176
	
2004-06-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b205

	* Change: Minor performance enhancements - don't load photos when
	  we don't need to! (Probably more of these coming.)

2004-06-21  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b204

	* Change: Add wordwrapping for comments as a failsafe, in case of
	  pre-1.4.4 abusive comments.

	* Change: Modify text for comments_length in config wiz to note that
	  we have a hard limit of 1000 chars.

2004-06-21  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b203

	* Fix: Prevent abnormally large comments from being entered.
	  New limits:  100 chars for name, 1000 chars for comment

2004-06-21  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b202

	* Change: Performance enhancement for getNextPhoto() - we don't need
	  to load the photos for subalbums when we're checking permissions,
	  we only need the album itself.  Cuts our getFile() calls in half.

2004-06-20  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b201

	* Fix: Out of Bounds error in postnuke

	* Change:  Add "\r\n" to a mail() additional header, just in case.
	  (It shouldn't be needed, since it's the only header)

2004-06-19  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b200

	* Change: Add option to set default album permissions to 
	  "loggedin" instead of "everybody"

2004-06-18  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b199

	* Bug 969046: Prevent an impatient user from deleting two albums
	  at once by clicking the form submit twice.
